tests/ui/err/wrong-level.stderr
error: unknown log level 'foo'
 --> tests/ui/err/wrong-level.rs:1:1
  |
1 | #[logcall::logcall("foo")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `logcall::logcall` (in Nightly builds, run with -Z macro-backtrace for more info)
