tests/ui/err/wrong-level.rs
#[logcall::logcall("foo")]
fn f() {}

fn main() {}
